--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/core": "^0.34.2",
+    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.50.0",
     "axios": "^1.10.0",
     "next": "15.3.3",
